<resources>
    <string name="app_name">Simple Maze</string>
    <string name="app_url">com.potatoinc.mazeaddict</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- Menu -->
    <string name="hi">Hello</string>
    <string name="score">You have</string>
    <string name="play">Play!</string>
    <string name="settings">Settings</string>
    <string name="nameasking">Hi! Please enter your name bellow.</string>
    <string name="validate">Let\'s go!</string>
    <string name="giveup">Give up</string>
    <string name="okay">Okay!</string>
    <string name="goodjob">Good job, you won!</string>
    <string name="lost">Sorry, wrong way, you lost.</string>
    <string name="invalidname">Sorry but your name must have a length between 4 and 15 characters.</string>
    <string name="wrongsize">The maze size must be between 25 and 150.</string>

    <string name="cant_open_market">Could not open Android market, please install the market app.</string>
    <string name="start_rate_message">You have solved a few mazes already, would you like to rate this app ? Your ratings mean a lot to us.</string>
    <string name="rate_message">You will be redirected to google play to rate this app. Continue ?</string>
    <string name="no_thank_you">No thank you.</string>
    <string name="yes">Yes!</string>
    <string name="no">No!</string>

    <!-- Settings -->
    <string name="other">Other</string>
    <string name="no_turning_back">No turning back</string>
    <string name="trail">Leave trail</string>
    <string name="size">Size (25 - 150)</string>

    <string name="info_maze">Swipe to move</string>
</resources>
