<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <TextView
            android:id="@+id/fragment_menu_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/dark_grey"
            android:textSize="45sp"/>

        <LinearLayout
            android:id="@+id/fragment_menu_info_layout_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/fragment_menu_title"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/fragment_menu_hi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/hi"
                android:textColor="@color/dark_grey"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/fragment_menu_hiname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:gravity="center"
                android:text="Erwan !"
                android:textColor="@color/orange"
                android:textSize="18sp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/fragment_menu_info_layout_score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/fragment_menu_info_layout_name"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/fragment_menu_yourscore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/score"
                android:textColor="@color/dark_grey"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/fragment_menu_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:gravity="center"
                android:text="180 points"
                android:textColor="@color/orange"
                android:textSize="18sp"/>
        </LinearLayout>

        <Button
            android:id="@+id/fragment_menu_play_button"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:layout_below="@+id/fragment_menu_info_layout_score"
            android:text="@string/play"
            android:background="@drawable/button"/>

        <Button
            android:id="@+id/fragment_menu_settings_button"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/fragment_menu_play_button"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/settings"
            android:background="@drawable/button"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/fragment_menu_namegetter"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <View
            android:id="@+id/fragment_menu_namegetter_overlay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/dark_grey"
            android:alpha="0.8"
            android:clickable="true"/>

        <View
            android:id="@+id/fragment_menu_namegetter_background"
            android:layout_width="300dp"
            android:layout_height="180dp"
            android:layout_centerInParent="true"
            android:background="@drawable/button_filled"/>

        <TextView
            android:id="@+id/fragment_menu_namegetter_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignTop="@+id/fragment_menu_namegetter_background"
            android:layout_marginTop="10dp"
            android:layout_alignLeft="@+id/fragment_menu_namegetter_background"
            android:layout_marginLeft="5dp"
            android:layout_alignRight="@+id/fragment_menu_namegetter_background"
            android:layout_marginRight="5dp"
            android:text="@string/nameasking"
            android:textColor="@color/dark_grey"
            android:textSize="20sp"
            android:gravity="center"/>

        <EditText
            android:id="@+id/fragment_menu_namegetter_edittext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/fragment_menu_namegetter_message"
            android:layout_marginTop="10dp"
            android:layout_alignLeft="@+id/fragment_menu_namegetter_background"
            android:layout_marginLeft="5dp"
            android:layout_alignRight="@+id/fragment_menu_namegetter_background"
            android:layout_marginRight="5dp"
            android:singleLine="true"/>

        <Button
            android:id="@+id/fragment_menu_namegetter_validate"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/fragment_menu_namegetter_edittext"
            android:layout_marginTop="10dp"
            android:background="@drawable/button"
            android:text="@string/validate"/>

        </RelativeLayout>

</RelativeLayout>